work in progress for idaholab/Malcolm#395, malcolm reporting capture statistics from zeek/suricata

--- a/logstash/pipelines/beats/01_input_beats.conf
+++ b/logstash/pipelines/beats/01_input_beats.conf
@@ -6,7 +6,8 @@ input {
 
 filter {
   # this pipeline only needs to see logs from other misc. beats used by Malcolm
-  if ("_malcolm_beats" in [tags]) {
+  if ("_malcolm_beats" in [tags]) or
+     ("_zeekdiagnostic" in [tags]) {
     mutate { id => "mutate_filebeat_malcolm_beats_forward_tag_remove"
              remove_tag => [ "_malcolm_beats" ] }
   } else {
