--- a/logstash/pipelines/beats/11_beats_logs.conf
+++ b/logstash/pipelines/beats/11_beats_logs.conf
@@ -1,6 +1,7 @@
-######################## # parsing of logs/metrics specific to the operation of
-#                          Malcolm and Hedgehog Linux itself (i.e., not captured
-#                          network traffic metadata, but operational metadata)
+########################
+# parsing of logs/metrics specific to the operation of
+#   Malcolm and Hedgehog Linux itself (i.e., not captured
+#   network traffic metadata, but operational metadata)
 #
 # Copyright (c) 2024 Battelle Energy Alliance, LLC.  All rights reserved.
 #######################
@@ -780,6 +781,11 @@ filter {
       }
 
     } # [miscbeat][winstat]
+
+  } else if ("_zeekdiagnostic" in [tags]) {
+
+    mutate { id => "mutate_add_field_event_module_zeek_diagnostic"
+             add_field => { "[event][module]" => "zeek" } }
 
   } # event type (filebeat.nginx, miscbeat, etc)
 
