--- a/logstash/pipelines/beats/98_finalize.conf
+++ b/logstash/pipelines/beats/98_finalize.conf
@@ -82,7 +82,8 @@ filter {
                              "_jsonparsefailure",
                              "_dissectfailure",
                              "_ouilookupfailure",
-                             "_geoip_lookup_failure" ] }
+                             "_geoip_lookup_failure",
+                             "_zeekdiagnostic" ] }
 
 
     # event.provider
