work in progress for idaholab/Malcolm#395, malcolm reporting capture statistics from zeek/suricata

--- a/logstash/pipelines/beats/11_beats_logs.conf
+++ b/logstash/pipelines/beats/11_beats_logs.conf
@@ -784,6 +784,8 @@ filter {
 
     mutate { id => "mutate_add_field_event_module_zeek_diagnostic"
              add_field => { "[event][module]" => "zeek" } }
+    mutate { id => "mutate_remove_field_event_original_zeek_diagnostic"
+             remove_field => [ "[event][original]" ] }
 
   } # event type (filebeat.nginx, miscbeat, etc)
 
