work in progress for idaholab/Malcolm#395, added ZEEK_DISABLE_STATS environment variable

--- a/sensor-iso/interface/sensor_ctl/control_vars.conf
+++ b/sensor-iso/interface/sensor_ctl/control_vars.conf
@@ -55,6 +55,7 @@ export ZEEK_EXTRACTOR_OVERRIDE_FILE=
 export EXTRACTED_FILE_MIN_BYTES=64
 export EXTRACTED_FILE_MAX_BYTES=134217728
 export EXTRACTED_FILE_PRESERVATION=quarantined
+export ZEEK_DISABLE_STATS=true
 export ZEEK_DISABLE_HASH_ALL_FILES=
 export ZEEK_DISABLE_LOG_PASSWORDS=
 export ZEEK_DISABLE_SSL_VALIDATE_CERTS=
