--- a/arkime/etc/config.ini
+++ b/arkime/etc/config.ini
@@ -14,6 +14,7 @@ cronQueries=true
 dropGroup=arkime
 dropUser=arkime
 elasticsearch=http://opensearch:9200
+footerTemplate=_version_ | <a href="https://arkime.com">arkime.com 🦉</a> | <a href="/">Malc⦿lm 📄</a> | <a href="/dashboards">Dashboards 📊</a> | <a href="/netbox/">NetBox 💻 | _responseTime_ms ⏱️</a>
 freeSpaceG=10%
 geoLite2ASN=/opt/arkime/etc/GeoLite2-ASN.mmdb
 geoLite2Country=/opt/arkime/etc/GeoLite2-Country.mmdb
@@ -51,6 +52,7 @@ rotateIndex=daily
 rulesFiles=
 smtpIpHeaders=X-Originating-IP:;X-Barracuda-Apparent-Source-IP:
 spiDataMaxIndices=7
+spiViewCategoryOrder=malcolm
 supportSha256=false
 tcpSaveTimeout=720
 tcpTimeout=600
@@ -77,7 +79,7 @@ tpacketv3NumThreads=2
 tpacketv3BlockSize=8388608
 pcapWriteMethod=simple
 pcapWriteSize=2560000
-simpleCompression=none
+simpleCompression=zstd
 simpleZstdLevel=3
 simpleGzipLevel=3
 packetThreads=2
