--- a/sensor-iso/interface/sensor_ctl/arkime/config.ini
+++ b/sensor-iso/interface/sensor_ctl/arkime/config.ini
@@ -55,7 +55,7 @@ tpacketv3NumThreads=2
 tpacketv3BlockSize=8388608
 pcapWriteMethod=simple
 pcapWriteSize=2560000
-simpleCompression=none
+simpleCompression=zstd
 simpleZstdLevel=3
 simpleGzipLevel=3
 packetThreads=5
