work in progress for idaholab/Malcolm#395, malcolm reporting capture statistics from zeek/suricata

--- a/logstash/pipelines/zeek/11_zeek_parse.conf
+++ b/logstash/pipelines/zeek/11_zeek_parse.conf
@@ -5465,8 +5465,8 @@ filter {
       }
     }
 
-    mutate { id => "mutate_add_tag_zeek_diagnostic_analyzer"
-             add_tag => [ "_zeekdiagnostic" ] }
+    # we are *not* adding the _zeekdiagnostic even though it could arguably be classified as such, the reason being that
+    #   the UID/FUID and IP/ports make it suitable to be searched with the network data
 
   } else if ([log_source] == "broker") {
     #############################################################################################################################
