--- a/config/suricata-live.env.example
+++ b/config/suricata-live.env.example
@@ -4,5 +4,8 @@ SURICATA_LIVE_CAPTURE=false
 # Specifies the Suricata runmode for live capture (see
 #   https://suricata.readthedocs.io/en/latest/performance/runmodes.html)
 SURICATA_RUNMODE=workers
+# Whether or not enable capture statistics and include them in eve.json
+SURICATA_STATS_ENABLED=false
+SURICATA_STATS_EVE_ENABLED=false
 
 SURICATA_PCAP_PROCESSOR=false
