--- a/logstash/pipelines/beats/11_beats_logs.conf
+++ b/logstash/pipelines/beats/11_beats_logs.conf
@@ -784,8 +784,11 @@ filter {
 
     mutate { id => "mutate_add_field_event_module_zeek_diagnostic"
              add_field => { "[event][module]" => "zeek" } }
-    mutate { id => "mutate_remove_field_event_original_zeek_diagnostic"
-             remove_field => [ "[event][original]" ] }
+    mutate { id => "mutate_remove_fields_zeek_diagnostic"
+             remove_field => [ "[event][original]",
+                               "[firstPacket]",
+                               "[lastPacket]",
+                               "[zeek][ts]" ] }
 
   } # event type (filebeat.nginx, miscbeat, etc)
 
