work in progress for idaholab/Malcolm#395, malcolm reporting capture statistics from zeek/suricata

--- a/config/suricata-live.env.example
+++ b/config/suricata-live.env.example
@@ -7,5 +7,7 @@ SURICATA_RUNMODE=workers
 # Whether or not enable capture statistics and include them in eve.json
 SURICATA_STATS_ENABLED=false
 SURICATA_STATS_EVE_ENABLED=false
+SURICATA_STATS_INTERVAL=30
+SURICATA_STATS_DECODER_EVENTS=false
 
 SURICATA_PCAP_PROCESSOR=false
