--- a/logstash/pipelines/zeek/12_zeek_mutate.conf
+++ b/logstash/pipelines/zeek/12_zeek_mutate.conf
@@ -2484,6 +2484,9 @@ filter {
   if ([zeek][notice]) or ([zeek][signatures]) or ([zeek][weird]) {
     mutate { id => "mutate_add_field_ecs_event_kind_alert"
              add_field => { "[event][kind]" => "alert" } }
+  } else if ("_zeekdiagnostic" in [tags]) and ([zeek][stats]) {
+    mutate { id => "mutate_add_field_ecs_event_kind_event"
+             add_field => { "[event][kind]" => "metric" } }
   } else {
     mutate { id => "mutate_add_field_ecs_event_kind_event"
              add_field => { "[event][kind]" => "event" } }
