--- a/logstash/pipelines/suricata/11_suricata_logs.conf
+++ b/logstash/pipelines/suricata/11_suricata_logs.conf
@@ -50,6 +50,9 @@ filter {
         if ([suricata][event_type] == "alert") {
           mutate { id => "mutate_add_field_suricata_ecs_event_kind_alert"
                    add_field => { "[event][kind]" => "alert" } }
+        } else if ([suricata][event_type] == "stats") {
+          mutate { id => "mutate_add_field_suricata_ecs_event_kind_stats"
+                   add_field => { "[event][kind]" => "metric" } }
         } else {
           mutate { id => "mutate_add_field_suricata_ecs_event_kind_event"
                    add_field => { "[event][kind]" => "event" } }
