work in progress for idaholab/Malcolm#395, malcolm reporting capture statistics from zeek/suricata

--- a/logstash/pipelines/beats/01_input_beats.conf
+++ b/logstash/pipelines/beats/01_input_beats.conf
@@ -7,7 +7,8 @@ input {
 filter {
   # this pipeline only needs to see logs from other misc. beats used by Malcolm
   if ("_malcolm_beats" in [tags]) or
-     ("_zeekdiagnostic" in [tags]) {
+     ("_zeekdiagnostic" in [tags]) or
+     ("_suricatastats" in [tags]) {
 
     # rename message to event.original
     mutate { id => "mutate_rename_beats_message"
