--- a/logstash/pipelines/beats/11_beats_logs.conf
+++ b/logstash/pipelines/beats/11_beats_logs.conf
@@ -788,7 +788,22 @@ filter {
              remove_field => [ "[event][original]",
                                "[firstPacket]",
                                "[lastPacket]",
-                               "[zeek][ts]" ] }
+                               "[timestamp]",
+                               "[zeek][ts]",
+                               "[length]",
+                               "[event][duration]" ] }
+
+  } else if ("_suricatastats" in [tags]) {
+
+    mutate { id => "mutate_add_field_event_module_suricata_stats"
+             add_field => { "[event][module]" => "suricata" } }
+    mutate { id => "mutate_remove_fields_suricata_stats"
+             remove_field => [ "[firstPacket]",
+                               "[lastPacket]",
+                               "[timestamp]",
+                               "[suricata][timestamp]",
+                               "[length]",
+                               "[event][duration]" ] }
 
   } # event type (filebeat.nginx, miscbeat, etc)
 
