--- a/logstash/pipelines/output/98_finalize.conf
+++ b/logstash/pipelines/output/98_finalize.conf
@@ -22,6 +22,7 @@ filter {
                              "_jsonparsefailure",
                              "_malcolm_miscbeat",
                              "_ouilookupfailure",
+                             "_suricatastats",
                              "_zeekdiagnostic",
                              "beats_input_codec_plain_applied",
                              "beats_input_raw_event" ] }
