--- a/logstash/pipelines/suricata/11_suricata_logs.conf
+++ b/logstash/pipelines/suricata/11_suricata_logs.conf
@@ -52,7 +52,8 @@ filter {
                    add_field => { "[event][kind]" => "alert" } }
         } else if ([suricata][event_type] == "stats") {
           mutate { id => "mutate_add_field_suricata_ecs_event_kind_stats"
-                   add_field => { "[event][kind]" => "metric" } }
+                   add_field => { "[event][kind]" => "metric" }
+                   add_tag => [ "_suricatastats" ] }
         } else {
           mutate { id => "mutate_add_field_suricata_ecs_event_kind_event"
                    add_field => { "[event][kind]" => "event" } }
