--- a/logstash/pipelines/suricata/99_suricata_forward.conf
+++ b/logstash/pipelines/suricata/99_suricata_forward.conf
@@ -1,5 +1,13 @@
 output {
-  pipeline {
-    send_to => ["log-enrichment"]
+  # the Suricata stats logs are not network traffic metadata to be enriched,
+  #   and belong more with the supporting runtime-oriented logs
+  if "_suricatastats" in [tags] {
+    pipeline {
+      send_to => ["beats-parse"]
+    }
+  } else {
+    pipeline {
+      send_to => ["log-enrichment"]
+    }
   }
 }
