--- a/logstash/pipelines/beats/11_beats_logs.conf
+++ b/logstash/pipelines/beats/11_beats_logs.conf
@@ -781,9 +781,25 @@ filter {
     } # [miscbeat][winstat]
 
   } else if ("_zeekdiagnostic" in [tags]) {
+    #-------------------------------------------------
+    # Zeek diagnostic logs
+    # https://docs.zeek.org/en/master/script-reference/log-files.html#zeek-diagnostics
+
+    if ([zeek][stats]) {
+      # remove zero values from zeek stats
+      ruby {
+        id => "ruby_zeek_remove_zero_stats"
+        path => "/usr/share/logstash/malcolm-ruby/compact_event_hash.rb"
+        script_params => {
+          "field" => "[zeek][stats]"
+          "discard_zeroes" => "true"
+        }
+      }
+    }
 
     mutate { id => "mutate_add_field_event_module_zeek_diagnostic"
              add_field => { "[event][module]" => "zeek" } }
+
     mutate { id => "mutate_remove_fields_zeek_diagnostic"
              remove_field => [ "[event][original]",
                                "[firstPacket]",
@@ -794,11 +810,28 @@ filter {
                                "[event][duration]" ] }
 
   } else if ("_suricatastats" in [tags]) {
+    #-------------------------------------------------
+    # Suricata statistics
+    # https://docs.suricata.io/en/suricata-6.0.2/configuration/suricata-yaml.html#stats
+
+    if ([suricata][stats]) {
+      # remove zero values from suricata stats
+      ruby {
+        id => "ruby_suricata_remove_zero_stats"
+        path => "/usr/share/logstash/malcolm-ruby/compact_event_hash.rb"
+        script_params => {
+          "field" => "[suricata][stats]"
+          "discard_zeroes" => "true"
+        }
+      }
+    }
 
     mutate { id => "mutate_add_field_event_module_suricata_stats"
              add_field => { "[event][module]" => "suricata" } }
+
     mutate { id => "mutate_remove_fields_suricata_stats"
-             remove_field => [ "[firstPacket]",
+             remove_field => [ "[event][original]",
+                               "[firstPacket]",
                                "[lastPacket]",
                                "[timestamp]",
                                "[suricata][timestamp]",
