work in progress for idaholab/Malcolm#395, malcolm reporting capture statistics from zeek/suricata

--- a/logstash/pipelines/output/98_finalize.conf
+++ b/logstash/pipelines/output/98_finalize.conf
@@ -21,6 +21,7 @@ filter {
                              "_grokparsefailure",
                              "_jsonparsefailure",
                              "_malcolm_miscbeat",
+                             "_malcolm_beats",
                              "_ouilookupfailure",
                              "_suricatastats",
                              "_zeekdiagnostic",
