--- a/sensor-iso/interface/sensor_ctl/control_vars.conf
+++ b/sensor-iso/interface/sensor_ctl/control_vars.conf
@@ -111,6 +111,10 @@ export SURICATA_MANAGED_DIR=/var/lib/suricata
 export SURICATA_MANAGED_RULES_DIR="$SURICATA_MANAGED_DIR"/rules
 export SURICATA_REFRESH_CRON_EXPRESSION="15 2 * * *"
 export SURICATA_UPDATE_ETOPEN=true
+export SURICATA_STATS_ENABLED=false
+export SURICATA_STATS_EVE_ENABLED=false
+export SURICATA_STATS_INTERVAL=30
+export SURICATA_STATS_DECODER_EVENTS=false
 
 # affects Arkime only for now: beats values are stored in keystores per-beat
 export OS_PROTOCOL=https
