--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -12,6 +12,9 @@ x-logging:
 
 services:
   opensearch:
+    build:
+      context: .
+      dockerfile: Dockerfiles/opensearch.Dockerfile
     image: ghcr.io/idaholab/malcolm/opensearch:24.02.0
     # Technically the "hedgehog" profile doesn't have OpenSearch, but in that case
     #   OPENSEARCH_PRIMARY will be set to remote, which means the container will
@@ -54,6 +57,9 @@ services:
       retries: 3
       start_period: 180s
   dashboards-helper:
+    build:
+      context: .
+      dockerfile: Dockerfiles/dashboards-helper.Dockerfile
     image: ghcr.io/idaholab/malcolm/dashboards-helper:24.02.0
     profiles: ["malcolm"]
     logging: *default-logging
@@ -84,6 +90,9 @@ services:
       retries: 3
       start_period: 30s
   dashboards:
+    build:
+      context: .
+      dockerfile: Dockerfiles/dashboards.Dockerfile
     image: ghcr.io/idaholab/malcolm/dashboards:24.02.0
     profiles: ["malcolm"]
     logging: *default-logging
@@ -112,6 +121,9 @@ services:
       retries: 3
       start_period: 210s
   logstash:
+    build:
+      context: .
+      dockerfile: Dockerfiles/logstash.Dockerfile
     image: ghcr.io/idaholab/malcolm/logstash-oss:24.02.0
     profiles: ["malcolm"]
     logging: *default-logging
@@ -148,6 +160,10 @@ services:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
       - ./.opensearch.primary.curlrc:/var/local/curlrc/.opensearch.primary.curlrc:ro
       - ./.opensearch.secondary.curlrc:/var/local/curlrc/.opensearch.secondary.curlrc:ro
+      - ./logstash/config/logstash.yml:/usr/share/logstash/config/logstash.orig.yml:ro
+      - ./logstash/pipelines:/usr/share/logstash/malcolm-pipelines.available:ro
+      - ./logstash/patterns:/usr/share/logstash/malcolm-patterns:ro
+      - ./logstash/ruby:/usr/share/logstash/malcolm-ruby:ro
       - ./logstash/maps/malcolm_severity.yaml:/etc/malcolm_severity.yaml:ro
       - ./logstash/certs/ca.crt:/certs/ca.crt:ro
       - ./logstash/certs/server.crt:/certs/server.crt:ro
@@ -159,6 +175,9 @@ services:
       retries: 3
       start_period: 600s
   filebeat:
+    build:
+      context: .
+      dockerfile: Dockerfiles/filebeat.Dockerfile
     image: ghcr.io/idaholab/malcolm/filebeat-oss:24.02.0
     profiles: ["malcolm", "hedgehog"]
     logging: *default-logging
@@ -194,6 +213,9 @@ services:
       retries: 3
       start_period: 60s
   arkime:
+    build:
+      context: .
+      dockerfile: Dockerfiles/arkime.Dockerfile
     image: ghcr.io/idaholab/malcolm/arkime:24.02.0
     profiles: ["malcolm", "hedgehog"]
     logging: *default-logging
@@ -210,7 +232,6 @@ services:
       - ./config/upload-common.env
       - ./config/auth.env
       - ./config/arkime.env
-      - ./config/arkime-offline.env
       - ./config/arkime-secret.env
     environment:
       VIRTUAL_HOST : 'arkime.malcolm.local'
@@ -219,8 +240,11 @@ services:
     volumes:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
       - ./.opensearch.primary.curlrc:/var/local/curlrc/.opensearch.primary.curlrc:ro
-      - ./arkime/rules:/opt/arkime/rules:ro
       - ./pcap:/data/pcap
+      - ./arkime/rules:/opt/arkime/rules:ro
+      - ./arkime/etc/config.ini:/opt/arkime/etc/config.orig.ini:ro
+      - ./arkime/etc/user_settings.json:/opt/arkime/etc/user_settings.json:ro
+      - ./arkime/wise/source.zeeklogs.js:/opt/arkime/wiseService/source.zeeklogs.js:ro
     healthcheck:
       test: ["CMD", "curl", "--insecure", "--silent", "--fail", "https://localhost:8005/_ns_/nstest.html"]
       interval: 90s
@@ -228,6 +252,9 @@ services:
       retries: 3
       start_period: 210s
   arkime-live:
+    build:
+      context: .
+      dockerfile: Dockerfiles/arkime.Dockerfile
     image: ghcr.io/idaholab/malcolm/arkime:24.02.0
     profiles: ["malcolm", "hedgehog"]
     logging: *default-logging
@@ -258,9 +285,15 @@ services:
     volumes:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
       - ./.opensearch.primary.curlrc:/var/local/curlrc/.opensearch.primary.curlrc:ro
-      - ./arkime/rules:/opt/arkime/rules:ro
       - ./pcap:/data/pcap
+      - ./arkime/rules:/opt/arkime/rules:ro
+      - ./arkime/etc/config.ini:/opt/arkime/etc/config.orig.ini:ro
+      - ./arkime/etc/user_settings.json:/opt/arkime/etc/user_settings.json:ro
+      - ./arkime/wise/source.zeeklogs.js:/opt/arkime/wiseService/source.zeeklogs.js:ro
   zeek:
+    build:
+      context: .
+      dockerfile: Dockerfiles/zeek.Dockerfile
     image: ghcr.io/idaholab/malcolm/zeek:24.02.0
     profiles: ["malcolm", "hedgehog"]
     logging: *default-logging
@@ -284,6 +317,7 @@ services:
       - ./pcap:/pcap
       - ./zeek-logs/upload:/zeek/upload
       - ./zeek-logs/extract_files:/zeek/extract_files
+      - ./zeek/config/local.zeek:/opt/zeek/share/zeek/site/local.zeek:ro
       - ./zeek/intel:/opt/zeek/share/zeek/site/intel
       - ./zeek/custom:/opt/zeek/share/zeek/site/custom:ro
     healthcheck:
@@ -293,6 +327,9 @@ services:
       retries: 3
       start_period: 60s
   zeek-live:
+    build:
+      context: .
+      dockerfile: Dockerfiles/zeek.Dockerfile
     image: ghcr.io/idaholab/malcolm/zeek:24.02.0
     profiles: ["malcolm", "hedgehog"]
     logging: *default-logging
@@ -304,7 +341,7 @@ services:
       # NET_ADMIN and NET_RAW - to turn on promiscuous mode and capture raw packets
       - NET_ADMIN
       - NET_RAW
-      # SYS_NICE - to set process nice values, real-time scheduling policies, I/O scheduling
+      # SYS_NICE - to set process nice values, real-timescheduling policies, I/O scheduling
       - SYS_NICE
     env_file:
       - ./config/process.env
@@ -318,9 +355,13 @@ services:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
       - ./zeek-logs/live:/zeek/live
       - ./zeek-logs/extract_files:/zeek/extract_files
+      - ./zeek/config/local.zeek:/opt/zeek/share/zeek/site/local.zeek:ro
       - ./zeek/intel:/opt/zeek/share/zeek/site/intel
       - ./zeek/custom:/opt/zeek/share/zeek/site/custom:ro
   suricata:
+    build:
+      context: .
+      dockerfile: Dockerfiles/suricata.Dockerfile
     image: ghcr.io/idaholab/malcolm/suricata:24.02.0
     profiles: ["malcolm", "hedgehog"]
     logging: *default-logging
@@ -349,6 +390,9 @@ services:
       retries: 3
       start_period: 120s
   suricata-live:
+    build:
+      context: .
+      dockerfile: Dockerfiles/suricata.Dockerfile
     image: ghcr.io/idaholab/malcolm/suricata:24.02.0
     profiles: ["malcolm", "hedgehog"]
     logging: *default-logging
@@ -364,7 +408,7 @@ services:
       # NET_ADMIN and NET_RAW - to turn on promiscuous mode and capture raw packets
       - NET_ADMIN
       - NET_RAW
-      # SYS_NICE - to set process nice values and scheduling policies for capture
+      # SYS_NICE - to set process nice values, real-timescheduling policies, I/O scheduling
       - SYS_NICE
     env_file:
       - ./config/process.env
@@ -379,6 +423,9 @@ services:
       - ./suricata/rules:/opt/suricata/rules:ro
       - ./suricata/include-configs:/opt/suricata/include-configs:ro
   file-monitor:
+    build:
+      context: .
+      dockerfile: Dockerfiles/file-monitor.Dockerfile
     image: ghcr.io/idaholab/malcolm/file-monitor:24.02.0
     profiles: ["malcolm", "hedgehog"]
     logging: *default-logging
@@ -408,6 +455,9 @@ services:
       retries: 3
       start_period: 60s
   pcap-capture:
+    build:
+      context: .
+      dockerfile: Dockerfiles/pcap-capture.Dockerfile
     image: ghcr.io/idaholab/malcolm/pcap-capture:24.02.0
     profiles: ["malcolm", "hedgehog"]
     logging: *default-logging
@@ -437,6 +487,9 @@ services:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
       - ./pcap/upload:/pcap
   pcap-monitor:
+    build:
+      context: .
+      dockerfile: Dockerfiles/pcap-monitor.Dockerfile
     image: ghcr.io/idaholab/malcolm/pcap-monitor:24.02.0
     profiles: ["malcolm", "hedgehog"]
     logging: *default-logging
@@ -465,6 +518,9 @@ services:
       retries: 3
       start_period: 90s
   upload:
+    build:
+      context: .
+      dockerfile: Dockerfiles/file-upload.Dockerfile
     image: ghcr.io/idaholab/malcolm/file-upload:24.02.0
     profiles: ["malcolm"]
     logging: *default-logging
@@ -495,6 +551,9 @@ services:
     image: ghcr.io/idaholab/malcolm/htadmin:24.02.0
     profiles: ["malcolm"]
     logging: *default-logging
+    build:
+      context: .
+      dockerfile: Dockerfiles/htadmin.Dockerfile
     restart: "no"
     stdin_open: false
     tty: true
@@ -522,6 +581,9 @@ services:
     image: ghcr.io/idaholab/malcolm/freq:24.02.0
     profiles: ["malcolm"]
     logging: *default-logging
+    build:
+      context: .
+      dockerfile: Dockerfiles/freq.Dockerfile
     restart: "no"
     stdin_open: false
     tty: true
@@ -546,6 +608,9 @@ services:
     image: ghcr.io/idaholab/malcolm/netbox:24.02.0
     profiles: ["malcolm"]
     logging: *default-logging
+    build:
+      context: .
+      dockerfile: Dockerfiles/netbox.Dockerfile
     restart: "no"
     stdin_open: false
     tty: true
@@ -580,6 +645,9 @@ services:
     image: ghcr.io/idaholab/malcolm/postgresql:24.02.0
     profiles: ["malcolm"]
     logging: *default-logging
+    build:
+      context: .
+      dockerfile: Dockerfiles/postgresql.Dockerfile
     restart: "no"
     stdin_open: false
     tty: true
@@ -606,6 +674,9 @@ services:
     image: ghcr.io/idaholab/malcolm/redis:24.02.0
     profiles: ["malcolm"]
     logging: *default-logging
+    build:
+      context: .
+      dockerfile: Dockerfiles/redis.Dockerfile
     restart: "no"
     stdin_open: false
     tty: true
@@ -636,6 +707,9 @@ services:
     image: ghcr.io/idaholab/malcolm/redis:24.02.0
     profiles: ["malcolm"]
     logging: *default-logging
+    build:
+      context: .
+      dockerfile: Dockerfiles/redis.Dockerfile
     restart: "no"
     stdin_open: false
     tty: true
@@ -665,6 +739,9 @@ services:
     image: ghcr.io/idaholab/malcolm/api:24.02.0
     profiles: ["malcolm"]
     logging: *default-logging
+    build:
+      context: .
+      dockerfile: Dockerfiles/api.Dockerfile
     command: gunicorn --bind 0:5000 manage:app
     restart: "no"
     stdin_open: false
@@ -689,6 +766,9 @@ services:
       retries: 3
       start_period: 60s
   nginx-proxy:
+    build:
+      context: .
+      dockerfile: Dockerfiles/nginx.Dockerfile
     image: ghcr.io/idaholab/malcolm/nginx-proxy:24.02.0
     profiles: ["malcolm"]
     logging: *default-logging
