idaholab/Malcolm#403, redirect /dashboards/ link to Kibana in NGINX proxy in elasticsearch/kibana-based deployment

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -144,7 +144,6 @@ http {
 
     # Arkime -> Dashboards shortcut
     location ~* /idark2dash(.*) {
-      include /etc/nginx/nginx_auth_rt.conf;
       set $filter_start_time now-1d;
       if ($arg_start != '') {
         set $filter_start_time \'$arg_start\';
@@ -187,12 +186,9 @@ http {
       proxy_set_header Host file-monitor.malcolm.local;
     }
 
-    # already prepended /dashboards to match the server.basePath in OpenSearch Dashboards's YML config file
+    # OpenSearch dashboards (or Kibana)
     location /dashboards {
-      include /etc/nginx/nginx_auth_rt.conf;
-      proxy_pass http://dashboards;
-      proxy_redirect off;
-      proxy_set_header Host dashboards.malcolm.local;
+      include /etc/nginx/nginx_dashboards_rewrite_rt.conf;
     }
 
     # offline region maps for dashboards
