--- a/nginx/nginx_readonly.conf
+++ b/nginx/nginx_readonly.conf
@@ -118,11 +118,9 @@ http {
       proxy_set_header Host file-monitor.malcolm.local;
     }
 
-    # already prepended /dashboards to match the server.basePath in OpenSearch Dashboards's YML config file
+    # OpenSearch dashboards (or Kibana)
     location /dashboards {
-      proxy_pass http://dashboards;
-      proxy_redirect off;
-      proxy_set_header Host dashboards.malcolm.local;
+      include /etc/nginx/nginx_dashboards_rewrite_rt.conf;
     }
 
     # offline region maps for dashboards
